src/test/deca/syntax/invalid/SansObjet/EmptyMainNonFerme.deca
//Description
//  test de emptuMain pas ferme
//
//Réponse
//  Erreur syntaxique ligne 8
//  missing '}' at '<EOF>'

{